# rukiki

./: README.md
.github/workflows/: rukiki-tests.yml
luci-app-rukiki/: Makefile  README.rukiki.md
luci-app-rukiki/htdocs/luci-static/resources/view/rukiki/: home.js
luci-app-rukiki/root/etc/config/: rukiki
luci-app-rukiki/root/etc/rukiki/ucode/: generate.uc
luci-app-rukiki/root/etc/uci-defaults/: 40_luci-app-rukiki
luci-app-rukiki/root/usr/libexec/rukiki/: apply
luci-app-rukiki/root/usr/share/luci/menu.d/: luci-app-rukiki.json
luci-app-rukiki/root/usr/share/rpcd/acl.d/: luci-app-rukiki.json
luci-app-rukiki/root/usr/share/rpcd/ucode/: luci.rukiki
tests/: conftest.py  dump.uc  pyproject.toml  test_generate.py
tests/fixtures/: nikki  rukiki
